mirror-demo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirror-demo-svc
spec:
  selector:
    app: mirror-demo
  ports:
  - port: 80
    targetPort: 80
