mirror-demo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mirror-demo
spec:
  ingressClassName: nginx
  rules:
  - host: mirror-demo.voda.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mirror-demo-svc
            port:
              number: 80
